--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,6 @@
 # testing
 /coverage
 
-# production
-/build
-
 # misc
 .DS_Store
 .env.local
@@ -21,3 +18,21 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# generate output
+lib
+
+# compiled binary addons (https://nodejs.org/api/addons.html)
+build/Release
