--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
-  "name": "react-split",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-panelgroup": "^1.0.12",
-    "react-scripts": "4.0.2",
-    "styled-components": "^5.2.1",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+  "name": "@devbookhq/react-split",
+  "version": "1.0.0",
+  "description": "Create split views like in popular coding editors",
+  "author": {
+    "name": "FoundryLabs, Inc.",
+    "email": "hello@usedevbook.com",
+    "url": "https://usedevbook.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DevbookHQ/react-split"
+  },
+  "main": "lib/index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "rollup -c",
+    "start": "rollup -c -w"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {},
+  "peerDependencies": {
+    "react": ">= 16.8.0 < 2",
+    "react-dom": ">= 16.8.0 < 2",
+    "styled-components": ">= 5.0.0"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.7"
-  }
+    "@types/node": "^12.20.4",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/styled-components": "^5.1.7",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "styled-components": "^5.2.1",
+    "typescript": "^4.1.5"
+  },
+  "files": [
+    "lib",
+    "package.json",
+    "package-lock.json",
+    "README.md"
+  ],
+  "keywords": [
+    "devbook",
+    "react",
+    "resize",
+    "split"
+  ]
 }
