--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "outDir": "lib",
+    "module": "esnext",
     "target": "es5",
     "lib": [
       "dom",
@@ -13,15 +15,16 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "declaration": true
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["node_modules", "lib", "rollup.config.js"]
 }
