--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,8 @@
     "@devbookhq/splitter": "^1.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "17.0.0",
