--- a/package.json
+++ b/package.json
@@ -26,12 +26,18 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.8",
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/styled-components": "^5.1.7",
+    "autoprefixer": "^10.2.5",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "postcss": "^8.2.7",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.5"
