--- a/example/package.json
+++ b/example/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.0",
   "main": "src/index.tsx",
   "dependencies": {
-    "@devbookhq/splitter": "^1.1.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "@devbookhq/splitter": "file:../lib",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@types/react": "17.0.0",
+    "@types/react": "^17.0.20",
     "@types/react-dom": "17.0.0",
     "typescript": "4.1.3"
   },
