--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.tsx",
   "dependencies": {
-    "@devbookhq/splitter": "file:../lib",
+    "@devbookhq/splitter": "file:..",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1"
   },
