--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/react": "^17.0.20",
     "@types/react-dom": "17.0.0",
+    "@types/styled-components": "^5.1.15",
     "typescript": "4.1.3"
   },
   "scripts": {
