--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "type": "git",
     "url": "https://github.com/DevbookHQ/splitter"
   },
-  "main": "lib/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/mjs/index.js",
   "scripts": {
     "prepublishOnly": "rollup -c",
     "build": "rollup -c",
     "watch": "rollup -c -w"
-  },
-  "peerDependencies": {
-    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -29,16 +27,14 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.7",
     "autoprefixer": "^10.2.5",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "postcss": "^8.2.7",
     "rollup": "^2.56.2",
-    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
-    "styled-components": "^5.2.1",
     "typescript": "^4.4.3"
   },
   "files": [
