--- a/package.json
+++ b/package.json
@@ -24,17 +24,15 @@
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.2.5",
-    "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
     "postcss": "^8.2.7",
     "rollup": "^2.56.2",
     "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.4.3"
   },
   "files": [
