--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-typescript": "^8.3.0",
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
@@ -33,6 +32,7 @@
     "rollup": "^2.56.2",
     "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.1",
     "typescript": "^4.4.3"
   },
   "files": [
