Re-compute split if child nodes are inserted dynamically; Fix bug that caused overriding of user defined gutter classes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "outDir": "lib",
     "target": "es6",
     "lib": ["dom", "ESNext"],
+    "sourceMap": true,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
