--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-is": "^17.0.3",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.7",
     "rollup": "^2.56.2",
@@ -46,5 +47,8 @@
     "react",
     "resize",
     "split"
-  ]
+  ],
+  "dependencies": {
+    "react-is": "^17.0.2"
+  }
 }
